[gd_scene load_steps=55 format=3 uid="uid://deape0t56pm74"]

[ext_resource type="Script" uid="uid://cc0ryny1ixirm" path="res://main.gd" id="1_lquwl"]
[ext_resource type="Script" uid="uid://dmmf6yacjdvqx" path="res://Player.gd" id="2_7mycd"]
[ext_resource type="PackedScene" uid="uid://c5l0aej3cgpyr" path="res://levels/level_town.tscn" id="4_5vw27"]
[ext_resource type="Texture2D" uid="uid://lellt15rdsej" path="res://art/characters/head/heads/human/male/headMale.png" id="4_7mycd"]
[ext_resource type="Texture2D" uid="uid://dbmumbjpx85rt" path="res://tilesets/dungeon_tileset.tres" id="4_vivmo"]
[ext_resource type="Script" uid="uid://cp43pu5qpfke" path="res://dungeon_tile_map.gd" id="5_2cqfq"]
[ext_resource type="SpriteFrames" uid="uid://b0qtqxg0e24br" path="res://frames/body_frames.tres" id="5_5vw27"]
[ext_resource type="Script" uid="uid://xqdehdhsl7s0" path="res://levels/level_town.gd" id="5_kek77"]
[ext_resource type="SpriteFrames" uid="uid://d2rxukcvsvobb" path="res://frames/hat_leather.tres" id="7_5vw27"]
[ext_resource type="SpriteFrames" uid="uid://chmqrrjbtobhb" path="res://frames/leather_armor.tres" id="8_5vw27"]
[ext_resource type="SpriteFrames" uid="uid://b8haqka8j8bc8" path="res://frames/pants_leather.tres" id="9_kek77"]
[ext_resource type="SpriteFrames" uid="uid://bumb6pnq36blb" path="res://frames/gloves_leather.tres" id="10_4c57u"]
[ext_resource type="SpriteFrames" uid="uid://ctu1vc2qwlpbf" path="res://frames/boots_leather.tres" id="11_efxa6"]
[ext_resource type="SpriteFrames" uid="uid://dn7m34g132c2b" path="res://frames/cuffs_leather.tres" id="12_dg77c"]
[ext_resource type="SpriteFrames" uid="uid://df6fcb24tn5il" path="res://frames/mantal_leather.tres" id="13_ycdy4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yaehf"]
texture = ExtResource("4_vivmo")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
1:0/next_alternative_id = 2
1:0/0 = 0
2:0/next_alternative_id = 2
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
11:0/0 = 0
12:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
0:1/next_alternative_id = 2
0:1/0 = 0
1:1/next_alternative_id = 2
1:1/0 = 0
2:1/next_alternative_id = 2
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
11:1/0 = 0
12:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
0:2/next_alternative_id = 2
0:2/0 = 0
1:2/next_alternative_id = 2
1:2/0 = 0
2:2/next_alternative_id = 2
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
11:2/0 = 0
12:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
0:3/next_alternative_id = 2
0:3/0 = 0
1:3/next_alternative_id = 2
1:3/0 = 0
2:3/next_alternative_id = 2
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
11:3/0 = 0
12:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
12:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
11:5/0 = 0
12:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
0:8/0 = 0
1:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
9:8/0 = 0
10:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
0:10/0 = 0
1:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
9:10/0 = 0
10:10/0 = 0
13:10/0 = 0
15:10/0 = 0
16:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
0:11/0 = 0
1:11/0 = 0
6:11/0 = 0
9:11/0 = 0
10:11/0 = 0
13:11/0 = 0
15:11/0 = 0
16:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
0:12/0 = 0
1:12/0 = 0
3:12/0 = 0
4:12/0 = 0
6:12/0 = 0
9:12/0 = 0
10:12/0 = 0
13:12/0 = 0
15:12/0 = 0
16:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
6:13/0 = 0
9:13/0 = 0
10:13/0 = 0
13:13/0 = 0
15:13/0 = 0
16:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
6:14/0 = 0
9:14/0 = 0
10:14/0 = 0
13:14/0 = 0
19:14/0 = 0
20:14/0 = 0
6:15/0 = 0
9:15/0 = 0
10:15/0 = 0
13:15/0 = 0
19:15/0 = 0
20:15/0 = 0
9:0/0 = 0
9:1/0 = 0
10:0/0 = 0
10:2/0 = 0
9:2/0 = 0
10:3/0 = 0
9:4/0 = 0
9:5/0 = 0
10:5/0 = 0
10:4/0 = 0
9:6/0 = 0
10:6/0 = 0
10:7/0 = 0
9:7/0 = 0
6:3/0 = 0
6:2/0 = 0
6:1/0 = 0
6:0/0 = 0
4:7/0 = 0
5:7/0 = 0
3:7/0 = 0
6:4/0 = 0
6:6/0 = 0
6:5/0 = 0
6:7/0 = 0
10:1/0 = 0

[sub_resource type="TileSet" id="TileSet_074og"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_yaehf")

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("4_7mycd")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("4_7mycd")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("4_7mycd")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqvo"]
atlas = ExtResource("4_7mycd")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp4k"]
atlas = ExtResource("4_7mycd")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("4_7mycd")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_seu75"]
atlas = ExtResource("4_7mycd")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("4_7mycd")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2sk"]
atlas = ExtResource("4_7mycd")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k2k6"]
atlas = ExtResource("4_7mycd")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rl1p"]
atlas = ExtResource("4_7mycd")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok6jj"]
atlas = ExtResource("4_7mycd")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnost"]
atlas = ExtResource("4_7mycd")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnkbs"]
atlas = ExtResource("4_7mycd")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6a44"]
atlas = ExtResource("4_7mycd")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cbny"]
atlas = ExtResource("4_7mycd")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrvbo"]
atlas = ExtResource("4_7mycd")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uypp3"]
atlas = ExtResource("4_7mycd")
region = Rect2(512, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blkrb"]
atlas = ExtResource("4_7mycd")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqjc"]
atlas = ExtResource("4_7mycd")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iyjs"]
atlas = ExtResource("4_7mycd")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w656"]
atlas = ExtResource("4_7mycd")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71vb"]
atlas = ExtResource("4_7mycd")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnkwl"]
atlas = ExtResource("4_7mycd")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vke2r"]
atlas = ExtResource("4_7mycd")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uit24"]
atlas = ExtResource("4_7mycd")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruth0"]
atlas = ExtResource("4_7mycd")
region = Rect2(512, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm4vd"]
atlas = ExtResource("4_7mycd")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjyto"]
atlas = ExtResource("4_7mycd")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm6fg"]
atlas = ExtResource("4_7mycd")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b17eg"]
atlas = ExtResource("4_7mycd")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntx8l"]
atlas = ExtResource("4_7mycd")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uatky"]
atlas = ExtResource("4_7mycd")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqtf5"]
atlas = ExtResource("4_7mycd")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vm84"]
atlas = ExtResource("4_7mycd")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu3dr"]
atlas = ExtResource("4_7mycd")
region = Rect2(512, 512, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_phcyf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnost")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnkbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6a44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cbny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrvbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uypp3")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blkrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e71vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnkwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vke2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uit24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruth0")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjyto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm6fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b17eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntx8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uatky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqtf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vm84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu3dr")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnost")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnkbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6a44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cbny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrvbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uypp3")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blkrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e71vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnkwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vke2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uit24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruth0")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjyto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm6fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b17eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntx8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uatky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqtf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vm84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu3dr")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[node name="main" type="Node2D"]
script = ExtResource("1_lquwl")

[node name="LevelTown" parent="." instance=ExtResource("4_5vw27")]
script = ExtResource("5_kek77")

[node name="DungeonTileMap" type="TileMap" parent="LevelTown"]
tile_set = SubResource("TileSet_074og")
format = 2
script = ExtResource("5_2cqfq")

[node name="Layer0" type="TileMapLayer" parent="LevelTown/DungeonTileMap"]
use_parent_material = true
tile_set = SubResource("TileSet_074og")

[node name="Camera2D" type="Camera2D" parent="LevelTown"]

[node name="CanvasLayer" type="CanvasLayer" parent="LevelTown/Camera2D"]

[node name="UI" type="Control" parent="LevelTown/Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HPBar" type="ProgressBar" parent="LevelTown/Camera2D/CanvasLayer/UI"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="RotateButton" type="Button" parent="LevelTown/Camera2D/CanvasLayer/UI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Player" type="CharacterBody2D" parent="LevelTown"]
script = ExtResource("2_7mycd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTown/Player"]

[node name="Graphics" type="Node2D" parent="LevelTown/Player"]

[node name="Body" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
y_sort_enabled = true
sprite_frames = ExtResource("5_5vw27")
animation = &"walk_down"
frame = 7
frame_progress = 0.38893443

[node name="Head" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 7
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_phcyf")
animation = &"idle_up"

[node name="HatLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 8
y_sort_enabled = true
sprite_frames = ExtResource("7_5vw27")
animation = &"idle_down"

[node name="ArmorLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 3
y_sort_enabled = true
sprite_frames = ExtResource("8_5vw27")
animation = &"idle_up"

[node name="PantsLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 1
sprite_frames = ExtResource("9_kek77")
animation = &"walk_up"

[node name="GlovesLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 5
sprite_frames = ExtResource("10_4c57u")
animation = &"walk_up"

[node name="BootsLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 2
sprite_frames = ExtResource("11_efxa6")
animation = &"walk_up"

[node name="CuffsLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 4
sprite_frames = ExtResource("12_dg77c")
animation = &"idle_down"

[node name="MantalLeather" type="AnimatedSprite2D" parent="LevelTown/Player/Graphics"]
z_index = 6
sprite_frames = ExtResource("13_ycdy4")
animation = &"walk_right"
